--- a/add-content.html
+++ b/add-content.html
@@ -1,4 +1,3 @@
-'use stritc';
 <!DOCTYPE html>
 <html>
   <head>
@@ -9,6 +8,8 @@
   <body>
     <h1>Constructive &amp; Co.</h1>
     <p>For all orders and inquiries please call <em>555-3344</em></p>
-      <script src="js/add-content.js"></script>
+    <script src="js/add-content.js"></script>
+    <p><script>document.write('<p>'+ userChoiceAndQuantity() +'</p>');</script></p>
   </body>
 </html>
+
