--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JavaScript &amp; jQuery - Chapter 1: The ABC of Programming</title>
+    <title>Howdy &amp; Hotels and Houses giveaway</title>
     <link rel="stylesheet" type="text/css" href="../css/index.css" />
   </head>
   <body>
-    <h1 id="header">JavaScript &amp; jQuery</h1>
-    <h2>Chapter 1: The ABC of Programming</h2>
+    <h1 id="header">hello &amp; Welcome</h1>
+    <h2>Hotels and Houses giveaway</h2>
     <table>
       <tr>
         <td>1</td>
